fix double wraper

--- a/api/styles/styles.css
+++ b/api/styles/styles.css
@@ -169,6 +169,8 @@ label {
   min-width: 11vw;
   flex-direction: row;
   flex-wrap: wrap;
+  padding: 15px;
+  box-sizing: border-box;
 }
 
 h2.dish-background-image-container__dish-name {
@@ -176,16 +178,19 @@ h2.dish-background-image-container__dish-name {
   color: rgba(255, 255, 255, 1);
   background-color: rgba(0, 0, 0, 0.5);
   text-shadow: 0 0 1vw rgba(0, 0, 0, 0.25);
+  text-align: center;
 }
 
 .dish-background-image-container .dish-label {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 11vw;
-  color: rgb(255 255 255);
-  background-color: rgba(0, 0, 0, 0);
+  width: auto;
+  color: rgb(9 9 9);
   font-size: 2vw;
+  background-color: rgb(247 247 247 / 50%);
+  text-shadow: 0 0 1vw rgba(0, 0, 0, 0.25);
+  text-align: center;
 }
 
 .main-diet {
